--- a/chapter1.Rmd
+++ b/chapter1.Rmd
@@ -1,5 +1,4 @@
 
 # About the project
 
-*Introduction to Open Data Science course, my github repository: ttps://github.com/peempe/IODS-project.*
-
+*Introduction to Open Data Science course, my github repository: https://github.com/peempe/IODS-project *
