--- a/README.Rmd
+++ b/README.Rmd
@@ -1,3 +1,1 @@
-# Course diary
-
-*A link to my course diary: https://peempe.github.io/IODS-project/ *
+*My my course diary: https://peempe.github.io/IODS-project/ *
