--- a/README.Rmd
+++ b/README.Rmd
@@ -1,8 +1,7 @@
 
 ---
-title: "Course diary"
 output: github_document
 ---
-Introduction to Open Data Science (IODS)
+I'm attending to University of Helsinki's Introduction to Open Data Science (IODS) course during fall 2018.
 
 You can find my course diary from here: https://peempe.github.io/IODS-project/
