--- a/chapter3.Rmd
+++ b/chapter3.Rmd
@@ -2,8 +2,9 @@
 
 ### Reading the data
 
-```{r results = 'hide'}
-alc <- read.table("alc.csv", sep = ";", header = T)
+```{r}
+alc <- read.table("http://s3.amazonaws.com/assets.datacamp.com/production/course_2218/datasets/alc.txt", 
+                  sep = ",", header = T)
 View(alc)
 colnames(alc)
 ```
