--- a/chapter3.Rmd
+++ b/chapter3.Rmd
@@ -55,5 +55,75 @@ g1 <- ggplot(alc, aes(x = high_use, y = absences, col = sex))
 g1 + geom_boxplot() + ggtitle("School absences by alcohol consumption")
 ```
 
+
+### Logistic regression
+
+```{r}
+m <- glm(high_use ~ Medu + famrel + health + absences, data = alc, family = "binomial")
+summary(m)
+# computing odds ratios (OR)
+OR <- coef(m) %>% exp
+
+# computing confidence intervals (CI)
+CI <- confint(m) %>% exp
+
+# printing out the odds ratios with their confidence intervals
+cbind(OR, CI)
+```
+
+
+### Predictive power of the model
+
+```{r}
+# predicting the probability of high_use
+probabilities <- predict(m, type = "response")
+
+# adding the predicted probabilities to 'alc'
+alc <- mutate(alc, probability = probabilities)
+
+# using the probabilities to make a prediction of high_use
+alc <- mutate(alc, prediction = probability > 0.5)
+
+# seeing the last ten original classes, predicted probabilities, and class predictions
+select(alc, failures, absences, sex, high_use, probability, prediction) %>% tail(10)
+
+# tabulating the target variable versus the predictions
+table(high_use = alc$high_use, prediction = alc$prediction)
+```
+```{r}
+# access dplyr and ggplot2
+library(dplyr); library(ggplot2)
+
+# initialize a plot of 'high_use' versus 'probability' in 'alc'
+g <- ggplot(alc, aes(x = probability, y = high_use, col = prediction))
+
+# define the geom as points and draw the plot
+g + geom_point()
+
+# tabulate the target variable versus the predictions
+table(high_use = alc$high_use, prediction = alc$prediction) %>% prop.table() %>% addmargins()
+
+# define a loss function (mean prediction error)
+loss_func <- function(class, prob) {
+  n_wrong <- abs(class - prob) > 0.5
+  mean(n_wrong)
+}
+
+# call loss_func to compute the average number of wrong predictions in the (training) data
+loss_func(class = alc$high_use, prob = alc$probability)
+```
+
+
+### 10-fold cross-validation
+
+```{r}
+# 10-fold cross-validation
+library(boot)
+cv <- cv.glm(data = alc, cost = loss_func, glmfit = m, K = 10)
+
+# average number of wrong predictions in the cross validation
+cv$delta[1]
+```
+
 **Work in progress... :)**
 
