--- a/chapter3.Rmd
+++ b/chapter3.Rmd
@@ -59,6 +59,8 @@ g1 + geom_boxplot() + ggtitle("School absences by alcohol consumption")
 ### Logistic regression
 
 ```{r}
+library(magrittr)
+
 m <- glm(high_use ~ Medu + famrel + health + absences, data = alc, family = "binomial")
 summary(m)
 # computing odds ratios (OR)
@@ -75,6 +77,8 @@ cbind(OR, CI)
 ### Predictive power of the model
 
 ```{r}
+library(dplyr); library(ggplot2)
+
 # predicting the probability of high_use
 probabilities <- predict(m, type = "response")
 
@@ -91,9 +95,6 @@ select(alc, failures, absences, sex, high_use, probability, prediction) %>% tail
 table(high_use = alc$high_use, prediction = alc$prediction)
 ```
 ```{r}
-# access dplyr and ggplot2
-library(dplyr); library(ggplot2)
-
 # initialize a plot of 'high_use' versus 'probability' in 'alc'
 g <- ggplot(alc, aes(x = probability, y = high_use, col = prediction))
 
@@ -125,5 +126,5 @@ cv <- cv.glm(data = alc, cost = loss_func, glmfit = m, K = 10)
 cv$delta[1]
 ```
 
-**Work in progress... :)**
+**Sorry, I didn't have time to finish the exercise.**
 
